--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ section {
     width: 100%;
     left: 0;
 }
+/* Начало навбара */
 .header {
     position: sticky;
     top: 0;
@@ -125,13 +126,13 @@ section {
     display: none;
 }
 #menu-btn {
+    cursor: pointer;
     font-size: 3rem;
     color: var(--black);
     display: none;
 }
-.home {
-    position: relative;
-}
+/* Конец навбара */
+/* Начало первой секции */
 .home .flex {
     display: flex;
     align-items: center;
@@ -179,6 +180,14 @@ section {
     animation-delay: calc(-3s * var(--i));
     background: var(--light-color);
 }
+@keyframes displayText {
+    0% {
+        visibility: visible;
+    }
+    33.33%, 100% {
+        visibility: hidden;
+    }
+}
 .text span::before {
     padding: 0.5rem 1.5rem;
     content: attr(data-text);
@@ -192,12 +201,34 @@ section {
     animation: animate 3s steps(12) infinite,
     caret 0.5s step-end infinite;
 }
+@keyframes animate {
+    0% {
+        width: 0;
+    }
+    50%, 100% {
+        width: calc(100% - 4rem);
+    }
+}
+@keyframes caret {
+    0% {
+        border-color: var(--black);
+    }
+    50% {
+        border-color: transparent;
+    }
+    100% {
+        border-color: var(--black);
+    }
+}
+
 .home .flex .content p {
     color: var(--light-black);
     font-size: 1.6rem;
     line-height: 1.8;
     margin: 1rem 0;
 }
+/* Конец первой секции */
+/* Начало второй секции */
 .skills-container .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, 35rem);
@@ -238,6 +269,8 @@ section {
     color: var(--light-color);
     line-height: 1.8;
 }
+/* Конец второй секции */
+/* Начало третьей секции */
 .about .row {
     display: flex;
     flex-wrap: wrap;
@@ -285,6 +318,8 @@ section {
 .about .row .content .info .flex p span {
     color: var(--black);
 }
+/* Конец третьей секции */
+/* Начало четвертой секции */
 .services .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, 35rem);
@@ -323,6 +358,8 @@ section {
     font-size: 1.6rem;
     text-align: center;
 }
+/* Конец четвертой секции */
+/* Начало пятой секции */
 .projects .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, 35rem);
@@ -365,6 +402,8 @@ section {
 .projects .box-container .box:hover .btn {
     bottom: 0;
 }
+/* Конец пятой секции */
+/* Начало шестой секции */
 .reviews {
     background: url(portfolio/reviews-bg.png);
     background-size: cover;
@@ -386,6 +425,16 @@ section {
     object-fit: contain;
     margin-bottom: 0.5rem;
     animation: fadeUp .2s linear backwards;
+}
+@keyframes fadeUp {
+    from {
+        transform: translateX(-3rem);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 .reviews .box-container .box h3 {
     font-size: 2rem;
@@ -433,6 +482,8 @@ section {
     background: var(--main-color);
     color: var(--black);
 }
+/* Конец шестой секции */
+/* Начало седьмой секции */
 .contact .row {
     display: flex;
     align-items: center;
@@ -460,7 +511,8 @@ section {
 .contact .row .form .input::placeholder {
     text-transform: capitalize;
 }
-.contact .row .form input:focus {
+.contact .row .form input:focus,
+.contact .row .form textarea:focus {
     background: var(--light-color);
 }
 .contact .row form .input {
@@ -495,7 +547,7 @@ section {
     line-height: 5rem;
     font-size: 2rem;
     background: var(--main-color);
-    color-interpolation-filters: var(--black);
+    color: var(--black);
     border-radius: .5rem;
     text-align: center;
 }
@@ -513,6 +565,8 @@ section {
 .contact .row  .box-container .box a:hover {
     text-decoration: underline;
 }
+/* Конец седьмой секции */
+/* Начало восьмой секции */
 .blogs .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, 35rem);
@@ -573,6 +627,8 @@ section {
     color: var(--black);
     line-height: 1.8;
 }
+/* Конец восьмой секции */
+/* Начало футера */
 .footer {
     background: var(--black);
 }
@@ -603,43 +659,9 @@ section {
 .footer .flex .rights span {
     color: var(--main-color);
 }
-@keyframes fadeUp {
-    from {
-        transform: translateX(-3rem);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-@keyframes animate {
-    0% {
-        width: 0;
-    }
-    50%, 100% {
-        width: calc(100% - 4rem);
-    }
-}
-@keyframes caret {
-    0% {
-        border-color: var(--black);
-    }
-    50% {
-        border-color: transparent;
-    }
-    100% {
-        border-color: var(--black);
-    }
-}
-@keyframes displayText {
-    0% {
-        visibility: visible;
-    }
-    33.33%, 100% {
-        visibility: hidden;
-    }
-}
+/* Конец футера */
+
+
 @media (max-width:991px) {
     html {
         font-size: 55%;
